Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 2.8.0
Description
Failed build:
http://sandbox.jenkins.cloudera.com/view/Impala/view/Evergreen-asf-master/job/impala-asf-master-core/393/
From the BE test logs:
[==========] Running 4 tests from 1 test case. [----------] Global test environment set-up. [----------] 4 tests from KuduScanNodeTest [ RUN ] KuduScanNodeTest.TestScanNode [ OK ] KuduScanNodeTest.TestScanNode (1800 ms) [ RUN ] KuduScanNodeTest.TestScanNullColValues [ OK ] KuduScanNodeTest.TestScanNullColValues (1037 ms) [ RUN ] KuduScanNodeTest.TestScanEmptyString Wrote minidump to /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/logs/be_tests/minidumps/kudu-scan-node-test/59cf0ffe-3076-3690-3cba5646-0275528f.dmp Wrote minidump to /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/logs/be_tests/minidumps/kudu-scan-node-test/59cf0ffe-3076-3690-3cba5646-0275528f.dmp # # A fatal error has been detected by the Java Runtime Environment: # # SIGSEGV (0xb) at pc=0x000000000124a9a8, pid=19751, tid=140208655132800 # # JRE version: Java(TM) SE Runtime Environment (7.0_75-b13) (build 1.7.0_75-b13) # Java VM: Java HotSpot(TM) 64-Bit Server VM (24.75-b04 mixed mode linux-amd64 compressed oops) # Problematic frame: # C [kudu-scan-node-test+0xe4a9a8] std::vector<impala::TupleDescriptor*, std::allocator<impala::TupleDescriptor*> >::size() const+0xc # # Core dump written. Default location: /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/exec/core or core.19751 # # An error report file with more information is saved as: # /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/exec/hs_err_pid19751.log # # If you would like to submit a bug report, please visit: # http://bugreport.sun.com/bugreport/crash.jsp # The crash happened outside the Java Virtual Machine in native code. # See problematic frame for where to report the bug. # <end of output> Test time = 7.45 sec ---------------------------------------------------------- Test Failed. "kudu-scan-node-test" end time: Sep 07 23:42 PDT "kudu-scan-node-test" time elapsed: 00:00:07
Unfortunately, I could not dig up any more information since the build slave is gone. You should be able to find the core in the S3 archive.